# test

./: CMakeLists.txt  Makefile  MyApp.h  MyFrame.h  README
lib/vc_dll/: wxbase28.exp  wxbase28.lib  wxbase28_net.exp  wxbase28_net.lib  wxbase28_net_vc_custom.idb  wxbase28_odbc_vc_custom.idb  wxbase28_vc_custom.idb  wxbase28_xml.exp  wxbase28_xml.lib  wxbase28_xml_vc_custom.idb  wxexpat.idb  wxexpat.lib  wxjpeg.idb  wxjpeg.lib  wxmsw28_adv.exp  wxmsw28_adv.lib  wxmsw28_adv_vc_custom.idb  wxmsw28_aui.exp  wxmsw28_aui.lib  wxmsw28_aui_vc_custom.idb  wxmsw28_core.exp  wxmsw28_core.lib  wxmsw28_core_vc_custom.idb  wxmsw28_dbgrid_vc_custom.idb  wxmsw28_gl_vc_custom.idb  wxmsw28_html.exp  wxmsw28_html.lib  wxmsw28_html_vc_custom.idb  wxmsw28_media.exp  wxmsw28_media.lib  wxmsw28_media_vc_custom.idb  wxmsw28_qa.exp  wxmsw28_qa.lib  wxmsw28_qa_vc_custom.idb  wxmsw28_richtext.exp  wxmsw28_richtext.lib  wxmsw28_richtext_vc_custom.idb  wxmsw28_xrc.exp  wxmsw28_xrc.lib  wxmsw28_xrc_vc_custom.idb  (+8 more)
lib/vc_lib/: wxbase28.idb  wxbase28_net.idb  wxbase28_net.lib  wxbase28_odbc.idb  wxbase28_odbc.lib  wxbase28_xml.idb  wxbase28_xml.lib  wxexpat.idb  wxexpat.lib  wxjpeg.idb  wxjpeg.lib  wxmsw28_adv.idb  wxmsw28_aui.idb  wxmsw28_aui.lib  wxmsw28_core.idb  wxmsw28_dbgrid.idb  wxmsw28_dbgrid.lib  wxmsw28_gl.idb  wxmsw28_gl.lib  wxmsw28_html.idb  wxmsw28_html.lib  wxmsw28_media.idb  wxmsw28_media.lib  wxmsw28_qa.idb  wxmsw28_qa.lib  wxmsw28_richtext.idb  wxmsw28_richtext.lib  wxmsw28_xrc.idb  wxpng.idb  wxpng.lib  wxregex.idb  wxregex.lib  wxtiff.idb  wxtiff.lib  wxzlib.idb  wxzlib.lib
src/: CMakeLists.txt  CMakeLists.txt~  MyApp.cpp  MyApp.h  MyFrame.cpp  main.cpp  pluginmanager.cpp
src/include/: defines.h  pluginapi.h  renderer.h
src/pluginapi/: coreapi.cpp  coreapi.h  defines.h  main.cpp  plugin.cpp  pluginapi.cpp  pluginapi.h  pluginmanager.cpp  pluginmanager.h  renderer.h
